syntax = "proto3";

package fluence.grpc.proxy;

message TestMessage {
    string str = 1;
    repeated string listStr = 2;
    bytes byteArray = 3;
    int32 counter = 4;
}

message TestRequest {
    TestMessage message = 1;
}

message TestResponse {
    TestMessage message = 1;
}

service TestService {
    rpc test(TestRequest) returns (TestResponse);
    rpc testCount(stream TestRequest) returns (stream TestResponse);
}